@@ -63,45 +63,75 @@ function script_make_command($scriptid,$hostid){
 }
 
 function execute_script($scriptid,$hostid){
-	global $ZBX_SERVER, $ZBX_SERVER_PORT;
-
-	$message = array();
-
-	if(!$socket = socket_create(AF_INET, SOCK_STREAM, SOL_TCP)){
+	global $ZBX_SERVER, $ZBX_SERVER_PORT, $ZBX_MESSAGES;
+	
+	if(!$socket = fsockopen($ZBX_SERVER, $ZBX_SERVER_PORT, $errorCode, $errorMsg, ZBX_SCRIPT_TIMEOUT)){
+		array_pop($ZBX_MESSAGES);
+		error(S_SCRIPT_ERROR_DESCRIPTION.': '.$errorMsg);
+		show_messages(false, '', S_SCRIPT_ERROR);
 		return false;
 	}
 
-	$res = socket_connect($socket, $ZBX_SERVER, $ZBX_SERVER_PORT);
+	$json = new CJSON();
 
-	if($res){
+	$array = Array(
+					'request' => 'command',
+					'nodeid' => id2nodeid($hostid),
+					'scriptid' => $scriptid,
+					'hostid' => $hostid
+					);
+
+	$dataToSend = $json->encode($array, false);
+
+	if(!defined('ZBX_SCRIPT_TIMEOUT')) define('ZBX_SCRIPT_TIMEOUT', 60);
+	stream_set_timeout($socket, ZBX_SCRIPT_TIMEOUT);
+
+	if(fwrite($socket, $dataToSend, zbx_strlen($dataToSend)) === false) {
+		error(S_SCRIPT_ERROR_DESCRIPTION.': '.S_SCRIPT_SEND_ERROR);
+		show_messages(false, '', S_SCRIPT_ERROR);
+		return false;
+	}
+
+	if(!defined('ZBX_SCRIPT_BYTES_LIMIT')) define('ZBX_SCRIPT_BYTES_LIMIT', 1073741824);
+	$response = '';
+	$pbl = ZBX_SCRIPT_BYTES_LIMIT > 8192 ? 8192 : ZBX_SCRIPT_BYTES_LIMIT; // PHP read bytes limit
+	$now = time();
+	for($i = 0; !feof($socket) && (time()-$now) < ZBX_SCRIPT_TIMEOUT && $i*$pbl < ZBX_SCRIPT_BYTES_LIMIT; $i++) {
+		if(($out = fread($socket, $pbl)) !== false) {
+			$response .= $out;
+		}else{
+			error(S_SCRIPT_ERROR_DESCRIPTION.': '.S_SCRIPT_READ_ERROR);
+			show_messages(false, '', S_SCRIPT_ERROR);
+			return false;
+		}
+	}
+	
+	if(!feof($socket)) {
+		if(time()-$now >= ZBX_SCRIPT_TIMEOUT) {
+			error(S_SCRIPT_ERROR_DESCRIPTION.': '.S_SCRIPT_TIMEOUT_ERROR);
+			show_messages(false, '', S_SCRIPT_ERROR);
+			return false;
+		}else if($i*$pbl >= ZBX_SCRIPT_BYTES_LIMIT) {
+			error(S_SCRIPT_ERROR_DESCRIPTION.': '.S_SCRIPT_BYTES_LIMIT_ERROR);
+			show_messages(false, '', S_SCRIPT_ERROR);
+			return false;
+		}else {
+			error(S_SCRIPT_ERROR_DESCRIPTION.': '.S_SCRIPT_UNKNOWN_ERROR);
+			show_messages(false, '', S_SCRIPT_ERROR);
+			return false;
+		}
+	}
+	
+	if(zbx_strlen($response) > 0){
 		$json = new CJSON();
-
-		$array = array();
-		$array['request'] = 'command';
-		$array['nodeid'] = id2nodeid($hostid);
-		$array['scriptid'] = $scriptid;
-		$array['hostid'] = $hostid;
-
-		$send = $json->encode($array, false);
-
-		socket_write($socket, $send);
-
-		$res = socket_read($socket, 65535);
+		$rcv = $json->decode($response, true);
+	}else{
+		error(S_SCRIPT_ERROR_DESCRIPTION.': '.S_SCRIPT_ERROR_EMPTY_RESPONSE);
+		show_messages(false, '', S_SCRIPT_ERROR);
+		return false;
 	}
 
-	if($res){
-		$json = new CJSON();
-
-		$rcv = $json->decode($res, true);
-	}
-	else{
-		$rcv['response']='failed';
-		$rcv['value'] = S_CONNECT_TO_SERVER_ERROR.' ['.$ZBX_SERVER.':'.$ZBX_SERVER_PORT.']'.
-				' ['.socket_strerror(socket_last_error()).']';
-	}
-
-	socket_close($socket);
-return $rcv;
+	fclose($socket);
+	return $rcv;
 }
-
 ?>
